--- a/honey3.html
+++ b/honey3.html
@@ -16,7 +16,12 @@
     <form ID="Form1">
         <input ID="Search" type="text" placeholder="  搜索关键字">
     </form>
-    <p style="clear: both"></p>
+    <div ID="BannerDiv">
+        <ul>
+            <li><a href="https://www.baidu.com/" title="登录">登录</a> </li>
+            <li><a href="https://www.baidu.com/" title="注册">注册</a> </li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
