--- a/honey3.html
+++ b/honey3.html
@@ -8,7 +8,6 @@
     <style type="text/css">
 
     </style>
-
 </head>
 <body>
 <div ID="TopFixed" class="Banner">
@@ -21,6 +20,17 @@
             <li><a href="https://www.baidu.com/" title="登录">登录</a> </li>
             <li><a href="https://www.baidu.com/" title="注册">注册</a> </li>
         </ul>
+    </div>
+</div>
+<div ID="Main">
+    <div ID="Left" class="MainSubDiv">
+        <h4>LoliSuri's art studio</h4>
+        <hr>
+        <p>I'm a slow walker,but I never walk backwards.</p>
+        <img src="img\blog.png">
+    </div>
+    <div ID="Right" class="MainSubDiv">
+        <div style="height: 500px"></div>
     </div>
 </div>
 </body>
