--- a/honey3.html
+++ b/honey3.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-<div ID="TopFixed" class="Banner">
+<div ID="Header" class="Banner">
     <img src="img\Menthea.png">
     <form ID="Form1">
         <input ID="Search" type="text" placeholder="  搜索关键字">
@@ -25,9 +25,25 @@
 <div ID="Main">
     <div ID="Left" class="MainSubDiv">
         <h4>LoliSuri's art studio</h4>
-        <hr>
+        <div class="Blank"></div>
         <p>I'm a slow walker,but I never walk backwards.</p>
         <img src="img\blog.png">
+        <div ID="Social">
+            <ul>
+                <li><img src="img\8-Twitter.png"></li>
+                <li><img src="img\9-tumblr.png"></li>
+                <li><img src="img\30-mail.png"></li>
+                <li><img src="img\133-sina-weibo.png"></li>
+            </ul>
+        </div>
+        <div class="Blank"></div>
+        <div ID="Menu">
+            <ul>
+                <li><img src="img\home.png"> <a href="honey3.html">Home</a> </li>
+                <li><img src="img\user.png"> <a href="honey3.html">About</a> </li>
+                <li><img src="img\list18.png"> <a href="honey3.html">Menu</a> </li>
+            </ul>
+        </div>
     </div>
     <div ID="Right" class="MainSubDiv">
         <div style="height: 500px"></div>
