--- a/honey3.html
+++ b/honey3.html
@@ -10,6 +10,7 @@
     </style>
 </head>
 <body>
+
 <div ID="Header" class="Banner">
     <img src="img\Menthea.png">
     <form ID="Form1">
@@ -46,7 +47,21 @@
         </div>
     </div>
     <div ID="Right" class="MainSubDiv">
-        <div style="height: 500px"></div>
+        <div class="RightContent">
+            <h3>Paper Boats-Tagore</h3>
+            <p>Day by dayI float my paper boats one by one down the running stream.<br>
+            In big black letters I write my name on them and the name of the village where I live.<br>
+            I hope that someone in some strange land will find them and know who I am.<br>
+            I load my little boats with shiuli flowers from our garden, and hope that these blooms of the dawn will be carried safely to land in the night.<br>
+            I launch my paper boats and look up into the sky and see the little clouds setting their white bulging sails.<br>
+            I know not what playmate of mine in the sky sends them down the air to race with my boats!<br>
+            When night comes I bury my face in my arms and dream that my paper boats float on and on under the midnight stars. <br>
+            The fairies of sleep are sailing in them, and the lading is their baskets full of dreams.</p>
+        </div>
+        <div class="RightContent" id="MapDiv" style="height: 200px">
+            boom
+        </div>
+
     </div>
 </div>
 </body>
